--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -87,9 +87,7 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-
-  /* font-size: 100%; */
-  font: inherit;
+  font-family: inherit;
   vertical-align: baseline;
   box-sizing: border-box;
 }
